# regularization-toolkit

./: README.md  example_one.ipynb  pyproject.toml
dev/: cgls_early_stopping.ipynb  cgls_early_stopping_with_transformation.ipynb  cgls_for_tikhonov.ipynb  discrepancy_principle.ipynb  l_curve.ipynb  me_method.ipynb  standard_form_transformation_case_3.ipynb  upre.ipynb
src/regtoolkit/cg/: __init__.py  cg.py
src/regtoolkit/iterative/: __init__.py  cgls.py
src/regtoolkit/parameter_selection/: __init__.py  discrepancy_principle.py  lcurve.py  maximum_expectation.py
src/regularization_toolkit/cg/: cg.py
